k8s-manifests/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa 
      containers:
        - name: backend
          # التعديل هنا بناءً على الـ JSON اللي بعته (جوه الـ body)
          image: 231056963705.dkr.ecr.eu-north-1.amazonaws.com/gig-route-backend:40-98e8383
          ports:
            - containerPort: 8000
