k8s-manifests/backend/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: backend
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
