k8s-manifests/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
